--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "module",
  
   "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "lint": "eslint .",
     "test": "npm run test:unit",
     "test:unit": "vitest",
     "test:unit:run": "vitest run",
